hw4 codeDrop