@@ -67,3 +67,11 @@ compileJava {
 compileTestJava {
     options.compilerArgs += ["--enable-preview"]
 }
+
+task runApp(type: JavaExec) {
+    jvmArgs += ["--enable-preview"]
+    maxHeapSize = '128m'
+    main = 'ru.vk.itmo.test.osokindm.TestServer'
+//    main = 'ru.vk.itmo.test.reference.ReferenceService'
+    classpath = sourceSets.main.runtimeClasspath
+}
